Fix background on mobile and footer style

--- a/css/main.css
+++ b/css/main.css
@@ -32,10 +32,21 @@ body {
   color: #8D8E90;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #1C1D21 url("../img/bg-static.png") no-repeat;
-  background-attachment: fixed;
-  background-position: center center;
-  height: 100%;
+}
+
+body:after {
+  content:"";
+  position:fixed; /* stretch a fixed position to the whole screen */
+  top:0;
+  height:100vh; /* fix for mobile browser address bar appearing disappearing */
+  left:0;
+  right:0;
+  z-index:-1; /* needed to keep in the background */
+  background: #1C1D21 url("../img/bg-static.png") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 p {
@@ -696,14 +707,22 @@ label {
 .footer {
   font-size: 12px;
   color: #003c54;
-  padding: 35px 0;
+  min-height: 100px;
   background: #41B6E6;
 }
 
-.footer .row-flex {
+.footer .footer-container {
+  width: 100%;
+  max-width: 930px;
+  padding: 25px 30px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.footer p {
+  margin-bottom: 0;
 }
 
 .footer a {
@@ -1008,12 +1027,6 @@ hr {
   margin-bottom: 5px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  .copyright,  .footer .links a {
-    font-size: 10px;
-  }
-}
-
 img.normal-bitnation-logo {
     margin-bottom: 50px;
 }
@@ -1135,10 +1148,6 @@ img.normal-bitnation-logo {
     margin: 0 auto 10px;
   }
 
-  .subscriber-section {
-    padding: 30px 0;
-  }
-
   .subscriber-section #mc_embed_signup_scroll > * {
     display: block;
   }
@@ -1186,7 +1195,7 @@ img.normal-bitnation-logo {
     margin-top: 25px;
   }
 
-  .footer .row-flex {
+  .footer .footer-container {
     flex-direction: column;
   }
 
@@ -1196,6 +1205,10 @@ img.normal-bitnation-logo {
 
   .footer .footer-logo-wrapper {
     margin-left: 0;
+  }
+
+  .footer img {
+    margin: 1em 0;
   }
 
   .bitnation-features-main {
